# perigee_demos

./: .gitignore  Cargo.toml  README.md  justfile
assets/blender/levels/: 0.blend  1.blend  2.blend
assets/gltf/shared/: sedan.glb
scripts/: build-wasm-levels.js  optimize-gltfs.js  prepare-web-artifacts.js  util.js
single_player/: Cargo.toml
single_player/src/: lib.rs
single_player/src/config/: car.rs  character_controller.rs  level_0.rs  level_1.rs  level_2.rs  mod.rs  plane_controller.rs  player.rs  raycast_vehicle.rs  sedan.rs
single_player/src/level_0/: config.rs  mod.rs
single_player/src/level_1/: checkpoint_relayer.rs  events.rs  mod.rs  moving_platform.rs
single_player/src/level_2/: events.rs  mod.rs
single_player/src/shared/: boom.rs  descriptor.rs  input.rs  interactions.rs  mod.rs  settings.rs  spring.rs
single_player/src/shared/car/: mod.rs
single_player/src/shared/controllers/: car.rs  mod.rs  plane.rs  raycast_vehicle.rs
single_player/src/shared/controllers/character/: mod.rs  utils.rs
single_player/src/shared/events/: character_controller.rs  mod.rs
single_player/src/shared/player/: mod.rs  shared.rs
single_player/src/shared/prefabs/: mod.rs  sedan.rs
single_player/src/shared/prefabs/player/: mod.rs  utils.rs
single_player/src/shared/traits/: mod.rs
single_player/wasm_js_wrappers/levels/0/: sim.js  sim.test.js
single_player/wasm_js_wrappers/levels/1/: sim.js  sim.test.js
single_player/wasm_js_wrappers/levels/2/: sim.js  sim.test.js
single_player/wasm_js_wrappers/levels/shared/: sim-utils.js  wasm-ffi-utils.js
(+3 files in other folders)
