[package]
name = "single_player"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
strip = "debuginfo"
lto = true

[lib]
crate-type = ["cdylib"]

[features]
level_1 = []

[dependencies]
# https://github.com/aunyks/perigee
perigee = { version = "0.5.3", features = ["ffi"] }

# https://github.com/serde-rs/serde
serde = { version = "1.0.97", features = ["derive", "rc"] }

# https://github.com/jbaublitz/getset
getset = { version = "0.1.2" }